# bmc

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  compile_commands.json  dump.vcd  main.cpp  run.py  run.sh  runparall.py  tmp.txt
.clangd/index/: bmc.cpp.4A778CF068372654.idx  bmc.h.0DBF7BEAE953B2B3.idx  btor2_encoder.cpp.62E610C653493A41.idx  btor2_encoder.h.5BE0EF7E6E897CB7.idx  btor2_witness._printer.h.DC7875B60A030B9A.idx  btor2parser.h.CD977EFACA9E223F.idx  exceptions.h.F9627FB5D4896ED4.idx  main.cpp.7D9AC68FBB543491.idx  ts.cpp.DE5103B412842E0C.idx  ts.h.0CA6F4C95AEEF3E2.idx  unroller.cpp.9923B9456019B822.idx  unroller.h.D46019D8073FE88F.idx
bmc/: bmc.cpp  bmc.h
frontends/: btor2_encoder.cpp  btor2_encoder.h
printer/: btor2_witness._printer.h  btor2_witness_printer.h  vcd_printer.cpp  vcd_printer.h
test/: counter-false.btor
tests/encoder/input/benchmark/: VexRiscv-regch0-15.btor  VexRiscv-regch0-20.btor  VexRiscv-regch0-30.btor  btormc  picorv32-check.btor  picorv32-pcregs.btor  ponylink-slaveTXlen-sat.btor  ponylink-slaveTXlen-unsat.btor  run.sh  zipcpu-busdelay.btor  zipcpu-pfcache.btor  zipcpu-zipmmu.btor
tests/encoder/input/btor2/: mycounter.aag  mycounter.btor2
tests/encoder/input/mybtor2/: counter-false.aag  counter-false.aig  mycounter-false.btor2  mycounter-true.btor2  p-counter-false-10.btor2
trans/: ts.cpp  ts.h  unroller.cpp  unroller.h
utils/: exceptions.h  logger.cpp  logger.h
yosys/: counter-false-10.v  counter-false-10.ys  counter-false.v  counter-false.ys  counter-true.ys  m-counter-btor2.ys  m-counter-false-aig.ys  m-mycounter-aig.ys  m-mycounter-btor2.ys  mycounter-false.v  mycounter-true.v  mycounter.v  p-counter-false-btor2.ys  p-mycounter-btor2.ys
